--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-loading": "^2.0.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -37,8 +38,6 @@
     ]
   },
   "devDependencies": {
-    "prettier": "^2.8.6",
-    "prettier-plugin-tailwindcss": "^0.2.5",
     "tailwindcss": "^3.2.7"
   }
 }
